Added a functional embedded map using ng-map

--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,9 +1,7 @@
-<script src='/bower_components/lodash/lodash.js'></script>
-<script src='/bower_components/angular-google-maps/dist/angular-google-maps.js'></script>
 
-
-
-<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=San%20Antonio%2C%20TX%2C%20United%20States&key=AIzaSyBKwuHnZqq2iUQ1iu0HYBIEv0I6aX_g-7c"></iframe>
+<div map-lazy-load="http://maps.google.com/maps/api/js">
+  <map center="29.4,-98.5" zoom="10"></map>
+</div>
 
 
 
