--- a/app/index-async.html
+++ b/app/index-async.html
@@ -30,6 +30,7 @@
     $script([
       'bower_components/angular/angular.js',
       'bower_components/angular-route/angular-route.js',
+      'app/bower_components/ngmap/build/scripts/ng-map.min.js',
       'app.js',
       'view1/view1.js',
       'view2/view2.js',
