--- a/app/index.html
+++ b/app/index.html
@@ -39,5 +39,7 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="http://maps.google.com/maps/api/js"></script>
+  <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 </body>
 </html>
